--- a/manifest.json
+++ b/manifest.json
@@ -1,24 +1,61 @@
 {
-  "name": "Expiry Tracker",
-  "short_name": "ExpiryTrack",
-  "description": "Track product expiry dates – never waste food or medicine again.",
+  "name": "Oasis Pharmacy Tracker",
+  "short_name": "Oasis Pharmacy",
+  "description": "GS1 Barcode Scanner for Pharmacy Expiry Tracking",
   "start_url": "./index.html",
   "display": "standalone",
-  "background_color": "#0a0f1e",
-  "theme_color": "#0f172a",
-  "orientation": "portrait-primary",
+  "orientation": "portrait",
+  "theme_color": "#6C63FF",
+  "background_color": "#F5F7FB",
   "icons": [
     {
-      "src": "./icons/icon-192.png",
+      "src": "icons/icon-72.png",
+      "sizes": "72x72",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "icons/icon-96.png",
+      "sizes": "96x96",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "icons/icon-128.png",
+      "sizes": "128x128",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "icons/icon-144.png",
+      "sizes": "144x144",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "icons/icon-152.png",
+      "sizes": "152x152",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "icons/icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "./icons/icon-512.png",
+      "src": "icons/icon-384.png",
+      "sizes": "384x384",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "icons/icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
     }
-  ]
+  ],
+  "categories": ["medical", "utilities", "productivity"]
 }
